# f1tenth_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/car_description/share/car_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  rviz_launch.launch.py
install/car_description/share/car_description/config/: ackermann_control.yaml  car_params.yaml
install/car_description/share/car_description/meshes/: chassis.stl  left_wheel.stl  right_wheel.stl  steering_hinge.stl  wheel.stl
install/car_description/share/car_description/rviz/: racecar.rviz
install/car_description/share/car_description/urdf/: base_link.xacro  macros.xacro  material.xacro
install/keyboard_teleop/lib/keyboard_teleop/: keyboard_teleop_hold  keyboard_teleop_incremental
install/keyboard_teleop/share/keyboard_teleop/: package.dsv  package.ps1  package.sh  package.xml
install/keyboard_teleop/share/keyboard_teleop/config/: key_teleop.yaml
log/: latest_build
src/car_description/: package.xml  setup.py
src/car_description/config/: ackermann_control.yaml  params.yaml
src/car_description/urdf/: base_link.xacro
src/car_simulation/: CMakeLists.txt  package.xml  setup.py
src/car_simulation/car_simulation/: drive_replay.py  leader_position_publisher.py  open_loop_cmd_publisher.py  simulation_logger.py  spawn_leader_vehicle.py  vehicle_model_node.py
src/car_simulation/config/: vehicle_params.yaml
src/car_simulation/launch/: car_simulation_launch.py  carla_closed_loop.launch.py  carla_open_loop.launch.py  follower_model.launch.py  sim_validation.launch.py
src/car_simulation/scripts/: ackermann_test.py  ackermann_to_odom.py  analyze_logs.py  closed_loop_controller.py  drive_replay.py  leader_position_publisher.py  plot_odom.py  real_vs_sim.py  spawn_f1tenth_vehicle.py  spawn_f1tenth_vehicle_debug.py  vehicle_model_node.py
src/car_simulation/sim_log/: control.csv  error_stats.csv  leader.csv  model.csv  real.csv
src/data_logger/: command.txt  package.xml  setup.py
src/data_logger/data_logger/: save_ackermann_cmd.py  save_imu.py  save_joint_states.py  save_odom.py  save_tf.py
src/data_logger/launch/: data_logger_offline.launch.py  old.launch_v00.py
src/data_logger/logged_file/filtered/: drive.csv  filtered_ackermann_cmd.csv  filtered_drive.csv  filtered_imu.csv  filtered_joint_states.csv  filtered_odom.csv  imu.csv  odom.csv  tf.csv
src/data_logger/logged_file/logged_from_rosbag/: imu.csv  joint_states.csv  odom.csv
src/data_logger/logged_file/raw/: ackermann_cmd.csv  drive.csv  imu.csv  odom.csv
src/data_logger/logged_file/simulated/: sim_drive.csv  sim_odom.csv  sim_odom_filt.csv  sim_tf.csv  sim_tf_filt.csv
src/data_logger/scripts/: analize_tf.py  analyze.py  best_l_tot_lf.yaml  filter_csv_by_time.py  filter_csvs.py  filter_drive.py  grid_search_BC.py  grid_search_lf_lr.py  grid_search_tire.py  offline_validation.py  plot_odom.py
src/odom_logger/: package.xml  setup.cfg  setup.py
src/odom_logger/launch/: odom_offline_launch.py  offline_validation.launch.py  save_odom.launch.py
src/odom_logger/logged_file/: real_traj.csv
src/odom_logger/odom_logger/: save_odom.py
