<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_simulation</name>
  <version>0.0.0</version>
  <description>Csomag a szimulált kisautó vezérlésére és futtatására</description>
  <maintainer email="zoltaneke@icloud.com">ezo</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Függőségek build és futás közben -->
  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>car_description</depend>

  <!-- Ha szükséges: pluginlib, robot_state_publisher, stb. -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
