<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zoltaneke@icloud.com">ezo</maintainer>
  <license>TODO: License declaration</license>

  <!-- Függőségek build és futás közben -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>controller_manager</depend>
  <depend>car_description</depend>
 

  <!-- Ha szükséges: pluginlib, robot_state_publisher, stb. -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>carla</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
